--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,21 @@
+/** @format */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html {
-  --line-color: #e5e7eb;
+    --line-color: #e5e7eb;
 }
 
 html.dark {
-  --line-color: rgba(255, 255, 255, 0.2);
+    --line-color: rgba(255, 255, 255, 0.2);
 }
 
 .borderBlack {
-  @apply border border-black/10;
+    @apply border border-black/10;
+}
+
+body {
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
