--- a/app/globals.css
+++ b/app/globals.css
@@ -18,4 +18,12 @@ html.dark {
 
 body {
     transition: background-color 0.3s ease, color 0.3s ease;
+    font-family: var(--font-poppins);
+}
+
+.unbounded {
+    font-family: var(--font-unbounded);
+    font-weight: 500;
+    font-size: 1.95rem;
+    line-height: 2.25rem;
 }
